# kratos

./: .ICEauthority  .esd_auth  .gtk-bookmarks  .pulse-cookie  .xsession-errors
.cache/: event-sound-cache.tdb.5030c1dda6f808ccb84de6be4b83d0b2.x86_64-pc-linux-gnu
.cache/compizconfig/: 3d.pb  addhelper.pb  animation.pb  animationaddon.pb  annotate.pb  bench.pb  bicubic.pb  blur.pb  clone.pb  colorfilter.pb  commands.pb  core.pb  crashhandler.pb  cube.pb  cubeaddon.pb  dbus.pb  decoration.pb  expo.pb  extrawm.pb  ezoom.pb  fade.pb  fadedesktop.pb  firepaint.pb  fs.pb  gears.pb  glib.pb  gnomecompat.pb  grid.pb  group.pb  imgjpeg.pb  inotify.pb  kdecompat.pb  loginout.pb  (+46 more)
.gconfd/: saved_state
.pulse/: 5030c1dda6f808ccb84de6be4b83d0b2-device-volumes.tdb  5030c1dda6f808ccb84de6be4b83d0b2-runtime
.tsclient/: last.tsc
kratos ./: Kratos.files  Kratos.includes
kratos ./applications/topopt_application/: CMakeLists.txt  TopOptApplication.py  topopt_application.cpp  topopt_application.h
kratos ./applications/topopt_application/custom_conditions/: _directory  force_load_condition.cpp  line_load_3D_condition.cpp  point_load_3D_condition.cpp  surface_load_3D_condition.cpp
kratos ./applications/topopt_application/custom_constitutive/: _directory  hyperelastic_3D_law.cpp  linear_elastic_3D_law.cpp
kratos ./applications/topopt_application/custom_elements/: topopt_small_displacement_element.cpp  topopt_small_displacement_element.h
kratos ./applications/topopt_application/custom_python/: add_custom_constitutive_laws_to_python.cpp  add_custom_strategies_to_python.cpp  add_custom_utilities_to_python.cpp  topopt_python_application.cpp
kratos ./applications/topopt_application/custom_strategies/: adjoint_structure_strategy.h  residual_based_builder_and_solver.hpp  residual_based_newton_raphson_strategy.hpp
kratos ./applications/topopt_application/custom_strategies/custom_schemes/: residual_based_static_scheme.hpp
kratos ./applications/topopt_application/python_scripts/: _directory  conditions_python_utility.py  constitutive_law_python_utility.py  gid_output_utility.py  mechanical_TopOpt_solver.py  restart_utility.py
kratos ./applications/topopt_application/test_examples/01_SimpleCantileverBeam_60x20x4/: README.txt  RunTopologyOptimization.py  TopOptStructuralAnalysis.mdpa  TopOptStructuralAnalysis.time  materials.py
kratos ./applications/topopt_application/test_examples/TEMPLATE.gid/: .directory  Paraview_State_File_for_Figures.pvsm  ProjectParameters.py  RunTopologyOptimization.py  TopOpt.geo  TopOpt.msh  TopOpt.prj  TopOpt.rdr  TopOpt.spd  TopOptStructuralAnalysis.mdpa  TopOptStructuralAnalysis.time  _List_1_TopOptStructuralAnalysis.post.lst
(+166 files in other folders)
